--- a/dev/bigbang.yaml
+++ b/dev/bigbang.yaml
@@ -10,9 +10,9 @@ metadata:
   namespace: bigbang
 spec:
   interval: 1m
-  url: https://replace-with-your-git-repo.git
+  url: https://github.com/johnsblevins/big-bang-1.33.git
   ref:
-    branch: replace-with-your-branch
+    branch: template-demo
   secretRef:
     name: private-git
 ---
