--- a/dev/configmap.yaml
+++ b/dev/configmap.yaml
@@ -7,6 +7,12 @@ domain: bigbang.dev
 #       type: "NodePort"
 #       nodePortBase: 30000
 
+istio:
+  enabled: true
+  
+istiooperator:  
+  enabled: true
+
 flux:
   interval: 1m
   rollback:
